--- a/assets/css/acordeons/experience.css
+++ b/assets/css/acordeons/experience.css
@@ -24,6 +24,6 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('assets/img/icons/period.svg');
+    background-image: url('/assets/img/icons/period.svg');
     margin-right: .5rem;
 }
