--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -24,6 +24,8 @@
     height: 150px;
 
     border-radius: 50%;
+    object-fit: cover;   
+    object-position: center;
 }
 
 .header .title {
@@ -49,7 +51,7 @@
 }
 
 .content__info .cargo::before {
-    background-image: url('../img/icons/cargo.svg');
+    background-image: url('../../img/icons/cargo.svg');
 }
 
 .content__info .loc::before {
